@@ -1,5 +1,7 @@
 2.4.2 () -
 
+- TW-41   Tasks in subprojects are not counted in project completion (thanks
+          to Renato Alves).
 - TW-1450 Projects command should trigger running garbage collector (thanks to
           Tomas Babej).
 - TW-1535 move default listing-break from list to ls (thanks to David Patrick).
